test/tests/compiler/18_structures/invalid_types/initializers/initialize_static_struct_with_zero.plx
type struc s(    a: i32    )

#  you can't initialize a static struct (or any struct) with a scalar constant
pub x: struc s = false
